--- a/RockPaperScissors.html
+++ b/RockPaperScissors.html
@@ -5,6 +5,18 @@
   <meta charset="UTF-8"/>
 </head>
 <body>
-<script src="script.js"></script>
+<script src="script.js" defer></script>
+<div id="container">
+  <div id="buttonsArea">
+    <button id="rock">rock</button>
+    <button id="paper">paper</button>
+    <button id="scissors">scissors</button>
+  </div>
+  <div id="results">
+    <p id="resContent"></p>
+    <p id="resScore"></p>
+    <p id="winner"></p>
+  </div>
+</div>
 </body>
 </html>
